--- a/index.html
+++ b/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <title>Drop Down Menu Full</title>
-</head>
-<body>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Prevent flash of unstyled content -->
+    <style>html{visibility: hidden;opacity:0;}</style>
+  <script defer src="main.bundle.js"></script></head>
+  <body>
     <header class="header">
+      <img class="logo" src="97911feef8ee1ebca25f.png" alt = "Logo that reads Phony">
+
       <!-- dropdown menu -->
-      <nav class="drop-down-menu-grid">      
+      <nav class="drop-down-menu-grid">
+
         <!-- close btn -->
       <span class="material-icons-round" id="close-btn">close</span>     
         <div class="drop-down-menu-item">
@@ -84,8 +89,6 @@
       <div></div>
     </header>
     <div id="main-container">
-
     </div>
-    <script src="main.js"></script>      
-</body>
+  </body>
 </html>
