Add webpack file loaders

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
 
     <!-- Prevent flash of unstyled content -->
     <style>html{visibility: hidden;opacity:0;}</style>
-  <script defer src="main.bundle.js"></script></head>
+  </head>
   <body>
     <header class="header">
-      <img class="logo" src="97911feef8ee1ebca25f.png" alt = "Logo that reads Phony">
+      <img class="logo" src="imgs/drop-down-logo.png" alt = "Logo that reads Phony">
 
       <!-- dropdown menu -->
       <nav class="drop-down-menu-grid">
