--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,38 @@
   </head>
   <body>
     <header class="header">
-      <img class="logo" src="imgs/drop-down-logo.png" alt = "Logo that reads Phony">
-
+      <div class="header-top">
+        <img class="logo" src="imgs/drop-down-logo.png" alt = "Logo that reads Phony">
+        <div class="search-bar-div">
+          <input type="text" name="search-bar" id="search-bar">
+        </div>
+        <div class="header-top-links" >
+          <div class="header-top-link">
+              Support
+             <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <g>
+                  <path fill="none" d="M0 0h24v24H0z"/>
+                  <path d="M12 10l4 4H8z"/>
+              </g>
+            </svg>
+          </div>
+        </div>
+      </div>
       <!-- dropdown menu -->
       <nav class="drop-down-menu-grid">
-
         <!-- close btn -->
       <span class="material-icons-round" id="close-btn">close</span>     
         <div class="drop-down-menu-item">
           <div class="drop-down-header">
-            <button class="link">TV & Video</button>
-            <span class="material-icons-round">arrow_drop_down</span>
+            <div class="drop-down-menu-link">
+              TV & Video
+              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <g>
+                    <path fill="none" d="M0 0h24v24H0z"/>
+                    <path  d="M12 10l4 4H8z"/>
+                </g>
+              </svg>              
+            </div>
           </div>
           <div class="drop-down-links">
             <div>
