--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,25 @@
             </svg>
           </div>
         </div>
+        <div class="header-top-links" >
+          <div class="header-top-link">
+              Account
+             <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <g>
+                  <path fill="none" d="M0 0h24v24H0z"/>
+                  <path d="M12 10l4 4H8z"/>
+              </g>
+            </svg>
+          </div>
+        </div>
+        <div class="header-top-links" >
+          <div class="header-top-link">
+            <span class="material-icons-outlined cart-icon">shopping_cart</span>
+          </div>
+        </div>        
       </div>
       <!-- dropdown menu -->
-      <nav class="drop-down-menu-grid">
+      <nav class="drop-down-menu">
         <!-- close btn -->
       <span class="material-icons-round" id="close-btn">close</span>     
         <div class="drop-down-menu-item">
@@ -99,6 +115,162 @@
             </div>
           </div>
         </div>
+        <div class="drop-down-menu-item">
+          <div class="drop-down-header">
+            <div class="drop-down-menu-link">
+              Imaging
+              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <g>
+                    <path fill="none" d="M0 0h24v24H0z"/>
+                    <path  d="M12 10l4 4H8z"/>
+                </g>
+              </svg>              
+            </div>
+          </div>
+          <div class="drop-down-links">
+            <div>
+              <div class="drop-down-links-header">Interchangeable Lens Cameras</div>
+              <div class="links">
+                <a href="#all-cameras-ilc">All Interchangeable Lens Cameras</a>
+                <a href="#mirrorless-ff">Mirrorless Full-frame</a>
+                <a href="#mirrorless-asps-c">Mirrorless APS-C</a>
+                <a href="#cinema-line">Cinema Line</a>
+                <a href="#accessories">Accessories</a>
+                <a href="#about-cameras">About Sony Cameras</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Lenses</div>
+              <div class="links">
+                <a href="#all-lenses">All Lenses</a>
+                <a href="#mirrorless-e-mount">Mirrorless E-Mount</a>
+                <a href="#dslr-a-mount">DSLR A-Mount</a>
+                <a href="#all-ff-lenses">All Full-frame Lenses</a>
+                <a href="#all-aps-c-lenses">All APS-C Lenses</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Compact Cameras</div>
+              <div class="links">
+                <a href="#all-compact-cams">All Compact Cameras</a>
+                <a href="#acessories">Acessories</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Accessories</div>
+              <div class="links">
+                <a href="#all-accessories">All Accessories</a>
+                <a href="#media">Media</a>
+                <a href="#lense-accessories">Lense Accessories</a>
+                <a href="#power">Power</a>
+                <a href="#flashes-lights-mics">Flashes, Light & Microphones</a>
+                <a href="#grips-tripods-remotes">Grips, Tripods & Remotes</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Camcorders</div>
+              <div class="links">
+                <a href="#all-camcoreders">All Camcorders</a>
+                <a href="#accessories">Accessories</a>
+                <a href="#professional-video">Professional Video</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Community</div>
+              <div class="links">
+                <a href="#alpha-universe">Alpha Universe</a>
+                <a href="#sony-cine">Sony Cine</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="drop-down-menu-item">
+          <div class="drop-down-header">
+            <div class="drop-down-menu-link">
+              Audio
+              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <g>
+                    <path fill="none" d="M0 0h24v24H0z"/>
+                    <path  d="M12 10l4 4H8z"/>
+                </g>
+              </svg>              
+            </div>
+          </div>
+          <div class="drop-down-links">
+            <div>
+              <div class="drop-down-links-header">Headphones</div>
+              <div class="links">
+                <a href="#all-headphones">All Headphones</a>
+                <a href="#headband">Headband</a>
+                <a href="#in-ear">In-Ear</a>
+                <a href="#truly-wireless">Truly Wireless</a>
+                <a href="#accessories">Accessories</a>
+                <a href="#about-headphones">About Sony Headphones</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Speakers</div>
+              <div class="links">
+                <a href="#all-speakers">All Speakers</a>
+                <a href="#portable-speakers">Portable Speakers</a>
+                <a href="#home-theater-speakers">Home Theater Speakers</a>
+                <a href="#wearable-speakers">Wearable Speakers</a>
+                <a href="#party-spekaers">Party Speakers</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Soundbars</div>
+              <div class="links">
+                <a href="#all-soundbars">All Soundbars</a>
+                <a href="#a-series-soundbars">A-Series Soundbars</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Walkman & Digital Recorders</div>
+              <div class="links">
+                <a href="#all-walkmans-digital-recorders">All Walkman & Digital Recorders</a>
+                <a href="#walkman-mp3-players">Walkman & MP3 Players</a>
+                <a href="#digital-voice-recorders">Digital Voice Recorders</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Gaming</div>
+              <div class="links">
+                <a href="#all-inzone">All INZONE</a>
+                <a href="#inzone-monitors">INZONE Headsets</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Home Audio Components</div>
+              <div class="links">
+                <a href="#all-home-audio-comps">All Home Audio Components</a>
+                <a href="#av-receivers">AV Receivers</a>
+                <a href="#turntables">Turntables</a>
+                <a href="#signature-series">Signature Series</a>
+                <a href="#other-home-audio-comps">Other Home Audio Components</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Car & Marine Audio</div>
+              <div class="links">
+                <a href="#all-car-marine-audio">All Car & Marine Audio</a>
+                <a href="#modile-es-series">Mobile ES Series</a>
+                <a href="#receivers-players">Receivers & Players</a>
+                <a href="#amplifiers">Amplifiers</a>
+                <a href="#speakers-subwoofers">Speakers & Subwoofers</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Boomboxes & Radio</div>
+              <div class="links">
+                <a href="#all-boomboxes-radio">All Boomboxes & Radio</a>
+                <a href="#boomboxes">Boomboxes</a>
+                <a href="#radios">Radios</a>
+                <a href="#clock-radios">Clock Radios</a>
+              </div>
+            </div>
+          </div>
+        </div>        
       </nav>
       <!-- search -->
       <div></div>
