--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <title>Drop Down Menu Full</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Prevent flash of unstyled content -->
-    <style>html{visibility: hidden;opacity:0;}</style>
+    <!-- Prevent flash of unstyled content and oppacity 0 elements from showing on load-->
+    <style>html{display:none}</style>
   </head>
   <body>
     <header class="header">
@@ -26,6 +26,27 @@
               </g>
             </svg>
           </div>
+          <div class="modal-menu no-display">
+            <div>
+              <span class="material-icons-outlined">discount</span>
+              <a href="#store-support">Store support</a>              
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">contact_support</span>
+              <a href="#store-faq">Store FAQ</a>
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">edit_note</span>
+              <a href="#resgister-product">Register a Product</a>
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">support_agent</span>
+              <a href="#tech-support">Product Technical Support</a>
+            </div>
+          </div>
         </div>
         <div class="header-top-links" >
           <div class="header-top-link">
@@ -37,12 +58,51 @@
               </g>
             </svg>
           </div>
+          <div class="modal-menu">
+            <div>
+              <button>Sign In / Register</button>
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">track_changes</span>
+              <a href="#track-order">Track My order</a>              
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">storefront</span>
+              <a href="#store-credit">Sony Store Credit</a>
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined rotate-90">u_turn_left</span>
+              <a href="#reutrns">Returns</a>
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">note_add</span>
+              <a href="#resgister-product">Register a New Product</a>
+            </div>
+            <hr>
+            <div>
+              <span class="material-icons-outlined">collections_bookmark</span>
+              <a href="#my-products">My priducts</a>
+            </div>
+          </div>
         </div>
         <div class="header-top-links" >
           <div class="header-top-link">
             <span class="material-icons-outlined cart-icon">shopping_cart</span>
           </div>
-        </div>        
+          <div class="modal-menu">
+            <div>
+              Cart(0 Product)
+            </div>
+          <hr>
+            <div>
+              Hi, your cart is empty!
+            </div>
+          </div>
+        </div>     
       </div>
       <!-- dropdown menu -->
       <nav class="drop-down-menu">
@@ -267,6 +327,69 @@
                 <a href="#boomboxes">Boomboxes</a>
                 <a href="#radios">Radios</a>
                 <a href="#clock-radios">Clock Radios</a>
+              </div>
+            </div>
+          </div>
+        </div>        
+        <div class="drop-down-menu-item">
+          <div class="drop-down-header">
+            <div class="drop-down-menu-link">
+              Mobile
+              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <g>
+                    <path fill="none" d="M0 0h24v24H0z"/>
+                    <path  d="M12 10l4 4H8z"/>
+                </g>
+              </svg>              
+            </div>
+          </div>
+          <div class="drop-down-links">
+            <div>
+              <div class="drop-down-links-header">Smartphones</div>
+              <div class="links">
+                <a href="#all-smartphones">All Smartphones</a>
+                <a href="#accessories">Accessories</a>
+              </div>
+            </div>
+          </div>
+        </div>        
+        <div class="drop-down-menu-item">
+          <div class="drop-down-header">
+            <div class="drop-down-menu-link">
+              More
+              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <g>
+                    <path fill="none" d="M0 0h24v24H0z"/>
+                    <path  d="M12 10l4 4H8z"/>
+                </g>
+              </svg>              
+            </div>
+          </div>
+          <div class="drop-down-links">
+            <div>
+              <div class="drop-downlinks-header">aibo</div>
+              <div class="links">
+                <a href="#all-aibo">All aibo</a>
+                <a href="#explore-aibo">Explore aibo</a>
+                <a href="#apps-tools">Apps & Tools</a>
+                <a href="#services">Services</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Spatial Reality Display</div>
+              <div class="links">
+                <a href="#all-srd">All Spatial Reality Display</a>
+                <a href="#explore-srd">Explore Spatial Reality Display</a>
+                <a href="#apps-tools">Apps & Tools</a>
+              </div>
+            </div>
+            <div>
+              <div class="drop-downlinks-header">Airpeak</div>
+              <div class="links">
+                <a href="#all-airpeak">All Airpeak</a>
+                <a href="#explore-airpeak">Explore Airpeak</a>
+                <a href="#apps-tools">Apps & Tools</a>
+                <a href="#services">Services</a>
               </div>
             </div>
           </div>
