Add final layout   * Need to fix display bugs

--- a/src/index.html
+++ b/src/index.html
@@ -19,30 +19,27 @@
         <div class="header-top-links" >
           <div class="header-top-link">
               Support
-             <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+             <svg class="arrow arrow-large" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <g>
                   <path fill="none" d="M0 0h24v24H0z"/>
                   <path d="M12 10l4 4H8z"/>
               </g>
             </svg>
           </div>
-          <div class="modal-menu no-display">
-            <div>
+          <div class="modal-menu">
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">discount</span>
               <a href="#store-support">Store support</a>              
             </div>
-            <hr>
-            <div>
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">contact_support</span>
               <a href="#store-faq">Store FAQ</a>
-            </div>
-            <hr>
-            <div>
+            </div>           
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">edit_note</span>
               <a href="#resgister-product">Register a Product</a>
-            </div>
-            <hr>
-            <div>
+            </div>           
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">support_agent</span>
               <a href="#tech-support">Product Technical Support</a>
             </div>
@@ -51,7 +48,7 @@
         <div class="header-top-links" >
           <div class="header-top-link">
               Account
-             <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+             <svg class="arrow arrow-large" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <g>
                   <path fill="none" d="M0 0h24v24H0z"/>
                   <path d="M12 10l4 4H8z"/>
@@ -59,31 +56,26 @@
             </svg>
           </div>
           <div class="modal-menu">
-            <div>
-              <button>Sign In / Register</button>
-            </div>
-            <hr>
-            <div>
+            <div class="modal-menu-item">
+              <button id="sign-in-btn">Sign In / Register</button>
+            </div>           
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">track_changes</span>
               <a href="#track-order">Track My order</a>              
-            </div>
-            <hr>
-            <div>
+            </div>           
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">storefront</span>
               <a href="#store-credit">Sony Store Credit</a>
-            </div>
-            <hr>
-            <div>
+            </div>           
+            <div class="modal-menu-item">
               <span class="material-icons-outlined rotate-90">u_turn_left</span>
               <a href="#reutrns">Returns</a>
-            </div>
-            <hr>
-            <div>
+            </div>           
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">note_add</span>
               <a href="#resgister-product">Register a New Product</a>
-            </div>
-            <hr>
-            <div>
+            </div>            
+            <div class="modal-menu-item">
               <span class="material-icons-outlined">collections_bookmark</span>
               <a href="#my-products">My priducts</a>
             </div>
@@ -94,11 +86,10 @@
             <span class="material-icons-outlined cart-icon">shopping_cart</span>
           </div>
           <div class="modal-menu">
-            <div>
+            <div class="modal-menu-item">
               Cart(0 Product)
-            </div>
-          <hr>
-            <div>
+            </div>           
+            <div class="modal-menu-item cart-msg">
               Hi, your cart is empty!
             </div>
           </div>
@@ -112,7 +103,7 @@
           <div class="drop-down-header">
             <div class="drop-down-menu-link">
               TV & Video
-              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow arrow-small" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <g>
                     <path fill="none" d="M0 0h24v24H0z"/>
                     <path  d="M12 10l4 4H8z"/>
@@ -121,7 +112,7 @@
             </div>
           </div>
           <div class="drop-down-links">
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-down-links-header">Televisions</div>
               <div class="links">
                 <a href="#all-tvs">All TVs</a>
@@ -131,8 +122,8 @@
                 <a href="#accessories">Accessories</a>
               </div>
             </div>
-            <div>
-              <div class="drop-downlinks-header">Home Video</div>
+            <div class="drop-down-links-item">
+              <div class="drop-down-links-header">Home Video</div>
               <div class="links">
                 <a href="all-home-video">All Home Video</a>
                 <a href="#ultra-hd-bray-disc-players">4K Ultra-HD Blu-ray Disc Players</a>
@@ -140,16 +131,16 @@
                 <a href="dvd-players">DVD Players</a>
               </div>
             </div>
-            <div>
-              <div class="drop-downlinks-header">Projectors</div>
+            <div class="drop-down-links-item">
+              <div class="drop-down-links-header">Projectors</div>
               <div class="links">
                 <a href="#all-home-projectors">All Home Projectors</a>
                 <a href="#acessories">Acessories</a>
                 <a href="#professional-projectors">Professional Projectors</a>
               </div>
             </div>
-            <div>
-              <div class="drop-downlinks-header">Home Theater & Soundbars</div>
+            <div class="drop-down-links-item">
+              <div class="drop-down-links-header">Home Theater & Soundbars</div>
               <div class="links">
                 <a href="#all-home-theater-and-soundbars">All Home Theater and Soundbars</a>
                 <a href="#soundbars">Soundbars</a>
@@ -158,15 +149,15 @@
                 <a href="#accessories">Accessories</a>
               </div>
             </div>
-            <div>
-              <div class="drop-downlinks-header">Gaming</div>
+            <div class="drop-down-links-item">
+              <div class="drop-down-links-header">Gaming</div>
               <div class="links">
                 <a href="#all-inzone">All INZONE</a>
                 <a href="#inzone-monitors">INZONE Monitors</a>
               </div>
             </div>
-            <div>
-              <div class="drop-downlinks-header">Accessories</div>
+            <div class="drop-down-links-item">
+              <div class="drop-down-links-header">Accessories</div>
               <div class="links">
                 <a href="#tv-accessories">TV Accessories</a>
                 <a href="#projector-accessories">Projector Accessories</a>
@@ -179,7 +170,7 @@
           <div class="drop-down-header">
             <div class="drop-down-menu-link">
               Imaging
-              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow arrow-small" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <g>
                     <path fill="none" d="M0 0h24v24H0z"/>
                     <path  d="M12 10l4 4H8z"/>
@@ -188,7 +179,7 @@
             </div>
           </div>
           <div class="drop-down-links">
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-down-links-header">Interchangeable Lens Cameras</div>
               <div class="links">
                 <a href="#all-cameras-ilc">All Interchangeable Lens Cameras</a>
@@ -199,7 +190,7 @@
                 <a href="#about-cameras">About Sony Cameras</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Lenses</div>
               <div class="links">
                 <a href="#all-lenses">All Lenses</a>
@@ -209,14 +200,14 @@
                 <a href="#all-aps-c-lenses">All APS-C Lenses</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Compact Cameras</div>
               <div class="links">
                 <a href="#all-compact-cams">All Compact Cameras</a>
                 <a href="#acessories">Acessories</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Accessories</div>
               <div class="links">
                 <a href="#all-accessories">All Accessories</a>
@@ -227,7 +218,7 @@
                 <a href="#grips-tripods-remotes">Grips, Tripods & Remotes</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Camcorders</div>
               <div class="links">
                 <a href="#all-camcoreders">All Camcorders</a>
@@ -235,7 +226,7 @@
                 <a href="#professional-video">Professional Video</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Community</div>
               <div class="links">
                 <a href="#alpha-universe">Alpha Universe</a>
@@ -248,7 +239,7 @@
           <div class="drop-down-header">
             <div class="drop-down-menu-link">
               Audio
-              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow arrow-small" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <g>
                     <path fill="none" d="M0 0h24v24H0z"/>
                     <path  d="M12 10l4 4H8z"/>
@@ -257,7 +248,7 @@
             </div>
           </div>
           <div class="drop-down-links">
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-down-links-header">Headphones</div>
               <div class="links">
                 <a href="#all-headphones">All Headphones</a>
@@ -268,7 +259,7 @@
                 <a href="#about-headphones">About Sony Headphones</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Speakers</div>
               <div class="links">
                 <a href="#all-speakers">All Speakers</a>
@@ -278,14 +269,14 @@
                 <a href="#party-spekaers">Party Speakers</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Soundbars</div>
               <div class="links">
                 <a href="#all-soundbars">All Soundbars</a>
                 <a href="#a-series-soundbars">A-Series Soundbars</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Walkman & Digital Recorders</div>
               <div class="links">
                 <a href="#all-walkmans-digital-recorders">All Walkman & Digital Recorders</a>
@@ -293,14 +284,14 @@
                 <a href="#digital-voice-recorders">Digital Voice Recorders</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Gaming</div>
               <div class="links">
                 <a href="#all-inzone">All INZONE</a>
                 <a href="#inzone-monitors">INZONE Headsets</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Home Audio Components</div>
               <div class="links">
                 <a href="#all-home-audio-comps">All Home Audio Components</a>
@@ -310,7 +301,7 @@
                 <a href="#other-home-audio-comps">Other Home Audio Components</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Car & Marine Audio</div>
               <div class="links">
                 <a href="#all-car-marine-audio">All Car & Marine Audio</a>
@@ -320,7 +311,7 @@
                 <a href="#speakers-subwoofers">Speakers & Subwoofers</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Boomboxes & Radio</div>
               <div class="links">
                 <a href="#all-boomboxes-radio">All Boomboxes & Radio</a>
@@ -335,7 +326,7 @@
           <div class="drop-down-header">
             <div class="drop-down-menu-link">
               Mobile
-              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow arrow-small" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <g>
                     <path fill="none" d="M0 0h24v24H0z"/>
                     <path  d="M12 10l4 4H8z"/>
@@ -344,7 +335,7 @@
             </div>
           </div>
           <div class="drop-down-links">
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-down-links-header">Smartphones</div>
               <div class="links">
                 <a href="#all-smartphones">All Smartphones</a>
@@ -357,7 +348,7 @@
           <div class="drop-down-header">
             <div class="drop-down-menu-link">
               More
-              <svg class="arrow" width="44px" height="44px" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <svg class="arrow arrow-small" fill = "white" viewBox="3 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <g>
                     <path fill="none" d="M0 0h24v24H0z"/>
                     <path  d="M12 10l4 4H8z"/>
@@ -366,7 +357,7 @@
             </div>
           </div>
           <div class="drop-down-links">
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">aibo</div>
               <div class="links">
                 <a href="#all-aibo">All aibo</a>
@@ -375,7 +366,7 @@
                 <a href="#services">Services</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Spatial Reality Display</div>
               <div class="links">
                 <a href="#all-srd">All Spatial Reality Display</a>
@@ -383,7 +374,7 @@
                 <a href="#apps-tools">Apps & Tools</a>
               </div>
             </div>
-            <div>
+            <div class="drop-down-links-item">
               <div class="drop-downlinks-header">Airpeak</div>
               <div class="links">
                 <a href="#all-airpeak">All Airpeak</a>
@@ -395,14 +386,6 @@
           </div>
         </div>        
       </nav>
-      <!-- search -->
-      <div></div>
-      <!-- cart -->
-      <div></div>
-      <!-- login -->
-      <div></div>
-      <!-- support -->
-      <div></div>
     </header>
     <div id="main-container">
     </div>
